Project organized, margin collapsing fixed

--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,13 +1,11 @@
 @font-face { font-family: "Lato-Light";
-    src: url("./fonts/Lato-Light.ttf");
+    src: url("../fonts/Lato-Light.ttf");
 }
-
 @font-face { font-family: "Lato-Semibold";
-    src: url("./fonts/Lato-Semibold.ttf");
+    src: url("../fonts/Lato-Semibold.ttf");
 }
-
 @font-face { font-family: "Lato-Regular";
-    src: url("./fonts/Lato-Regular.ttf");
+    src: url("../fonts/Lato-Regular.ttf");
 }
 
 html, body {
@@ -15,12 +13,14 @@ html, body {
   background: #FFFFFF;
   color: #404040;
   height: 100%;
+  overflow: hidden;
+  margin: 0;
 }
 
 h2 {
   color: #404040;
   font-size: 20px;
-  padding-top: 90px;
+  margin-top: 90px;
 }
 
 /* Style the sidebar - fixed full height */
@@ -135,6 +135,11 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+textarea {
+  width: 280px;
+  height: 100px;
 }
 
 #AddToList {
